--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,7 @@ android:
     - android-25
     - extra-android-m2repository
 script:
-    - ./gradlew clean test assembleDevelopmentDebug
+    - ./gradlew clean test assembleDevelopmentDebug jacocoTestReport
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
