--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,13 +21,15 @@ android {
 }
 
 dependencies {
-  compile fileTree(dir: 'libs', include: ['*.jar'])
+  compile fileTree(include: ['*.jar'], dir: 'libs')
   androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
     exclude group: 'com.android.support', module: 'support-annotations'
   })
   compile 'com.android.support:appcompat-v7:25.2.0'
+  compile 'com.android.support:design:25.2.0'
   compile 'com.android.support.constraint:constraint-layout:1.0.2'
-
+  compile 'com.jakewharton:butterknife:8.5.1'
+  annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
   testCompile 'junit:junit:4.12'
   testCompile 'com.squareup.okhttp3:mockwebserver:3.6.0'
   testCompile 'com.squareup.retrofit2:retrofit-mock:2.2.0'
